otros cambios de salida factura
agregue boton de nueva salida, y al momento de guardar salida
deshabilite el boton de agregar salida para evitar que la agreguen doble
vez

--- a/web/REPORTES/BarrasCodigo.jrxml
+++ b/web/REPORTES/BarrasCodigo.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="idFactura" class="java.lang.String">
+	<parameter name="idFactura" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -39,7 +39,7 @@ FROM
      INNER JOIN `proveedor` proveedor ON factura.`id_proveedor` = proveedor.`id_proveedor`
      INNER JOIN `tipoEntrada` tipoEntrada ON factura.`id_tipoEntrada` = tipoEntrada.`id_tipoEntrada`
      INNER JOIN `formaDePago` formaDePago ON factura.`id_formaDePago` = formaDePago.`id_formaDePago`
-     WHERE factura.`id_factura`= $P{idFactura}]]>
+     WHERE articuloEntrada.`id_factura`= 1015]]>
 	</queryString>
 	<field name="articuloEntrada_cbInterno" class="java.lang.String"/>
 	<field name="articulo_id_marca" class="java.lang.Long"/>
