--- a/web/REPORTES/BarrasCodigo.jrxml
+++ b/web/REPORTES/BarrasCodigo.jrxml
@@ -44,7 +44,7 @@ FROM
      INNER JOIN `formaDePago` formaDePago ON factura.`id_formaDePago` = formaDePago.`id_formaDePago`
      INNER JOIN `marca` marca ON articulo.`id_marca` = marca.`id_marca`
 WHERE
-     articuloEntrada.`id_factura` = 1015]]>
+     articuloEntrada.`id_factura` = $P{idFactura}]]>
 	</queryString>
 	<field name="articuloEntrada_cbInterno" class="java.lang.String"/>
 	<field name="articulo_id_marca" class="java.lang.Long"/>
@@ -75,30 +75,30 @@ WHERE
 	<detail>
 		<band height="213" splitType="Stretch">
 			<textField>
-				<reportElement x="3" y="33" width="150" height="13" uuid="26bd53e5-1a24-4c97-b70e-7c2ad965b86c"/>
+				<reportElement x="3" y="33" width="150" height="15" uuid="26bd53e5-1a24-4c97-b70e-7c2ad965b86c"/>
 				<textElement>
-					<font fontName="Arial" size="8"/>
+					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{articuloEntrada_cbInterno}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2" y="45" width="151" height="16" uuid="8a6fc5e2-1932-48a7-92ae-61452a6852ba"/>
+				<reportElement x="3" y="42" width="151" height="20" uuid="8a6fc5e2-1932-48a7-92ae-61452a6852ba"/>
 				<textElement>
-					<font fontName="Arial" size="7"/>
+					<font fontName="Arial" size="7" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{articulo_articulo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2" y="80" width="151" height="35" uuid="1b074718-dead-45e3-9f1a-a8dab2d2dab8"/>
+				<reportElement x="2" y="79" width="151" height="35" uuid="1b074718-dead-45e3-9f1a-a8dab2d2dab8"/>
 				<textElement>
-					<font fontName="Arial" size="7"/>
+					<font fontName="Arial" size="7" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{departamento_entrega}]]></textFieldExpression>
 			</textField>
 			<componentElement>
 				<reportElement x="155" y="35" width="63" height="86" uuid="55ddbb36-a0d1-4c76-afda-29228b5351d7"/>
 				<jr:DataMatrix xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" textPosition="bottom">
-					<jr:codeExpression><![CDATA["RFC: "+$F{proveedor_rfc}+"\n"+"Prov"+$F{proveedor_proveedor}+"Dpto: "+$F{departamento_entrega}+"\n"+"FF: "+$F{factura_folioFactura}+"\n"+"FR: "+$F{factura_folioRequisicion}+"\n"+"TE: "+$F{tipoEntrada_tipoEntrada}+"\n"+"FF: "+$F{factura_fechaFactura}+"\n"+"FE: "+$F{factura_fechaRecepcion}]]></jr:codeExpression>
+					<jr:codeExpression><![CDATA["RFC: "+$F{proveedor_rfc}+"\n"+"Prov: "+$F{proveedor_proveedor}+"\n"+"Dpto: "+$F{departamento_entrega}+"\n"+"FF: "+$F{factura_folioFactura}+"\n"+"FR: "+$F{factura_folioRequisicion}+"\n"+"TE: "+$F{tipoEntrada_tipoEntrada}+"\n"+"FF: "+$F{factura_fechaFactura}+"\n"+"FE: "+$F{factura_fechaRecepcion}]]></jr:codeExpression>
 				</jr:DataMatrix>
 			</componentElement>
 			<componentElement>
@@ -110,7 +110,7 @@ WHERE
 			<textField>
 				<reportElement x="2" y="60" width="153" height="20" uuid="9dce7a9b-1c86-400f-843d-7fba5abb815e"/>
 				<textElement>
-					<font fontName="Arial" size="7"/>
+					<font fontName="Arial" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Marca: "+$F{marca_marca}+"\n"+"Modelo: "+$F{articulo_modelo}]]></textFieldExpression>
 			</textField>
